--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,13 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # 配置数据库
-spring.jpa.database = MYSQL  
+
+#spring.jpa.database = MYSQL
 # 查询时是否显示日志
 spring.jpa.show-sql = true  
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update  
+
+#spring.jpa.hibernate.ddl-auto = update
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy  
 # stripped before adding them to the entity manager)
