--- a/src/main/resources/jwt/jwt.properties
+++ b/src/main/resources/jwt/jwt.properties
@@ -1,4 +1,8 @@
 audience.clientId=098f6bcd4621d373cade4e832627b4f6
 audience.base64Secret=MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
+#发行者
 audience.name=restapiuser
-audience.expiresSecond=172800
+#30分钟 使用时自己*1000
+#audience.expiresSecond=1800
+#15天
+audience.refreshSecond=129600
