--- a/src/main/resources/jwt/jwt.properties
+++ b/src/main/resources/jwt/jwt.properties
@@ -2,7 +2,7 @@ audience.clientId=098f6bcd4621d373cade4e832627b4f6
 audience.base64Secret=MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
 #发行者
 audience.name=restapiuser
-#30分钟 使用时自己*1000
-#audience.expiresSecond=1800
+#120分钟 使用时自己*1000
+audience.expiresSecond=432000
 #15天
-audience.refreshSecond=129600
+audience.refreshSecond=1296000
