--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,10 @@
             <version>2.5.0</version>
         </dependency>
         <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.1.41</version>
