--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.datasource.url=jdbc:mysql://192.168.157.1:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+#图片存储目录
+cbs.imagesPath=file:/F:/javaDEMO/liuhhua008/images/
 # Redis数据库索引（默认为0）
 #spring.redis.database=0
 ## Redis服务器地址
@@ -29,7 +30,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql = true  
 # Hibernate ddl auto (create, create-drop, update)
 
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy  
 # stripped before adding them to the entity manager)
